bug: 75500 IE: "One or more attendees are not available at the selected time" related controls are misaligned
- Remove the negative top margin
- Add float to divs

Review: https://reviewboard.eng.vmware.com/r/352621/

http://bugzilla.zimbra.com/show_bug.cgi?id=75500

Copied from Perforce
 Change: 382579

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -5628,7 +5628,6 @@ DIV.ZmSuggestLink {
 .ZmLocationStatusConflict,
 .ZmLocationStatusResolved {
 	display:inline-block;
-	margin-top:-4px;
 	padding-right:8px;
 }
 .ZmLocationStatusValidating {
